- Modified Ra website to use YUI CSS - Added separate Login and Profile Management Page - Cleaned up and Removed unrelated functionality from Forums - Removed unnecessary pages from Ra website - Fixed a bug in EffectFadeIn that made it not work if the control is initially invisible.

--- a/Samples/media/MainStyles-0.7.1.css
+++ b/Samples/media/MainStyles-0.7.1.css
@@ -148,6 +148,10 @@ h2 { margin-top:2.7em; }
 #hd { background:url('sun_background.jpg') no-repeat; height:259px; margin:0 16px 0 16px; }
 #bd { margin:25px 41px 0 41px; line-height:18px; font-family:"Lucida Grande","Lucida Sans Unicode",verdana,tahoma,arial,sans-serif;}
 #ft { margin-left:auto; margin-right:auto; text-align:center; width:50%; padding:25px; }
+th, td { border:0; padding:0.3em; }
+table { border-collapse:separate; border-spacing:2px; }
+input[type="radio"], input[type="checkbox"] { vertical-align:sub; }
+span > input + label { padding-right:3px;padding-left:3px; }
 
 
 /* TreeView */
